# application-common

./: README.md  application-common.cabal
examples/: application-common-examples.cabal
examples/src/: hello-world-simple.hs  hello-world.hs
src/Main/: ApplicationMode.hs  Common.hs
src/Main/ApplicationMode/: Class.hs  SimpleAction.hs  SimpleMode.hs
src/System/Console/GetOpt/: UsageInfo.hs
test/: TestCase.hs
test/TestCase/Main/: ApplicationMode.hs
test/TestCase/Main/ApplicationMode/: SimpleAction.hs  SimpleMode.hs
tools/: hlint.sh
