name:                   application-common-examples
version:                0.4.0.0
synopsis:               Abstract way of building applications.
description:
  Abstract way of building applications that have multiple modes of operation
  and configuration passed on command line and/or using configuration files.
homepage:               https://github.com/trskop/application-common
license:                BSD3
license-file:           LICENSE
author:                 Peter Trsko
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2013 Peter Trško
category:               Development
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    README.md

flag pedantic
  description:
    Pass additional flags, including -Werror, to GHC during compilation.
  default: False

executable hello-world
  default-language:     Haskell2010
  main-is:              hello-world.hs
  hs-source-dirs:       src
  build-depends:
      base >= 4.5 && < 4.7
    , application-common == 0.3.0.0 || == 0.4.0.0
    -- ^ In version 0.3.0.0 SimpleMode was introduced and renderUsageInfo
    -- changed it's type.
    , data-default-class == 0.0.*
    , not-found >= 0.7.0.0
    , semigroups >= 0.8 && < 1

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

executable hello-world-simple
  default-language:     Haskell2010
  main-is:              hello-world-simple.hs
  hs-source-dirs:       src
  build-depends:
      base >= 4.5 && < 4.7
    , application-common == 0.3.0.0 || == 0.4.0.0
    -- ^ In version 0.3.0.0 SimpleMode was introduced and renderUsageInfo
    -- changed it's type.
    , data-default-class == 0.0.*
    , not-found >= 0.7.0.0
    , semigroups >= 0.8 && < 1

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/application-common.git
